--- a/manifests-1.2.0/mpi-job/mpi-operator/base/deployment.yaml
+++ b/manifests-1.2.0/mpi-job/mpi-operator/base/deployment.yaml
@@ -21,6 +21,7 @@ spec:
         - $(lock-namespace)
         - --kubectl-delivery-image
         - $(kubectl-delivery-image)
+        - --enable-gang-scheduling=true
         image: mpioperator/mpi-operator:latest
         imagePullPolicy: Always
         name: mpi-operator
