--- a/manifests-1.2.0/pytorch-job/pytorch-operator/base/deployment.yaml
+++ b/manifests-1.2.0/pytorch-job/pytorch-operator/base/deployment.yaml
@@ -20,6 +20,7 @@ spec:
         - --alsologtostderr
         - -v=1
         - --monitoring-port=8443
+        - --enable-gang-scheduling=true
         env:
         - name: MY_POD_NAMESPACE
           valueFrom:
