--- a/manifests-1.2.0/tf-training/tf-job-operator/base/deployment.yaml
+++ b/manifests-1.2.0/tf-training/tf-job-operator/base/deployment.yaml
@@ -17,6 +17,7 @@ spec:
         - --alsologtostderr
         - -v=1
         - --monitoring-port=8443
+        - --enable-gang-scheduling=true
         env:
         - name: MY_POD_NAMESPACE
           valueFrom:
